--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/blur": "^4.4.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/drawer": "^6.6.7",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
@@ -21,9 +22,10 @@
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "^2.14.1",
+    "react-native-gesture-handler": "^2.15.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-menu": "^0.23.0",
+    "react-native-reanimated": "^3.7.0",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-vector-icons": "^10.0.3",
